--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Question2Answer documentation
-url: http://docs.question2answer.org
+url: https://gateoverflow.github.io/q2a-docs
 baseurl: /
 permalink: pretty
 exclude: [vendor]
