--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Question2Answer documentation
 url: https://gateoverflow.github.io/q2a-docs
-baseurl: /q2a-docs
+baseurl: /
 permalink: pretty
 exclude: [vendor]
 
