--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Question2Answer documentation
-url: https://gateoverflow.github.io/q2a-docs
+url: http://docs.question2answer.org
 baseurl: /q2a-docs
 permalink: pretty
 exclude: [vendor]
